--- a/views/layout.html
+++ b/views/layout.html
@@ -12,26 +12,19 @@
 	@{import('meta', 'head', 'default.css', 'default.js', 'favicon.ico')}
 </head>
 <body data-jc="exec">
-	<div data-jc="cookie" class="hidden">This site uses cookies for visitor statistics. By continuing to browse the site you are agreeing to our use of cookies.</div>
 	<header>
 		<div class="container">
 			<a href="javascript:void(0)" class="mainmenu-button"><i class="fa fa-navicon"></i></a>
-			<a href="/"><img src="/img/logo.png" alt="@{config.name}" border="0" height="30" /></a>
-			<nav>
-				<a href="/"><i class="fa fa-home"></i>Home</a>
-				<a href="/services/">Services</a>
-				<a href="/references/">References</a>
-				<a href="/contact/">Contact</a>
-			</nav>
+			<a href="/">视频动漫化</a>
 		</div>
 	</header>
 	<div class="container">
 		@{body}
 	</div>
-	<footer>
+	<!--footer>
 		<div>&copy; 2015-2017 All rights reserved.</div>
 		<div><a href="http://www.totaljs.com">Powered by Total.js</a></div>
-	</footer>
+	</footer-->
 
 </body>
 </html>
